# envspec

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: sources.md
envspec/: __init__.py  cli.py  config.py  errors.py  field.py
examples/: app_config.py
src/envspec/: __init__.py  __main__.py  cli.py  config.py  diff.py  doctor.py  errors.py  fields.py  migrate.py  profiles.py  sources.py
src/envspec/contrib/: __init__.py  pydantic.py
src/envspec/render/: __init__.py  dotenv.py  markdown.py
tests/: test_config.py  test_diff.py  test_doctor.py  test_field.py  test_fields.py  test_migrate.py  test_profiles.py  test_public_api.py  test_pydantic.py  test_render.py  test_sources.py  test_sources_extra.py
