[tool.poetry]
name = "envspec"
version = "0.1.0"
description = "Schema-first environment configuration with validation and doctor CLI"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "envspec" }]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.0"
rich = "^13.7.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.4.0"

[tool.poetry.scripts]
envspec = "envspec.cli:app"

[tool.ruff]
line-length = 100
target-version = "py310"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"